refactor: 회원 탈퇴에 대한 body 삭제
