# src/main/java/app/fitsync/domain/user/controller/UserController.java
@@ -1,8 +1,8 @@
 package app.fitsync.domain.user.controller;
 
-import app.fitsync.domain.user.dto.UserDeleteRequest;
 import app.fitsync.domain.user.dto.UserRequest;
 import app.fitsync.domain.user.dto.UserResponse;
+import app.fitsync.global.DeleteType;
 import app.fitsync.domain.user.service.UserServiceInterface;
 import app.fitsync.global.exception.ErrorResponse;
 import io.swagger.v3.oas.annotations.Operation;
@@ -21,6 +21,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RequiredArgsConstructor
@@ -101,8 +102,11 @@ public class UserController {
                     content = @Content(schema = @Schema(implementation = ErrorResponse.class))
             )
     })
-    public ResponseEntity<UserResponse> deleteUser(@Valid @RequestBody UserDeleteRequest request) {
-        UserResponse response = userService.deleteUser(request);
+    public ResponseEntity<UserResponse> deleteUser(
+            @Parameter(description = "삭제 유형")
+            @RequestParam(defaultValue = "SOFT") DeleteType deleteType
+    ) {
+        UserResponse response = userService.deleteMe(deleteType);
         return ResponseEntity.ok(response);
     }
 }
